# ApEx4

./: CLI.cpp  CLI.h  CMakeLists.txt  Client.cpp  Client.h  Command.cpp  Command.h  DefaultIO.cpp  DefaultIO.h  Distance.cpp  Distance.h  Header.h  InputAndValidation.cpp  Knn.cpp  Knn.h  Makefile  README.md  Sample.cpp  Sample.h  Server.cpp  Server.h
